# mcp-operator

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  REQUIREMENTS.txt  manifest.json  mcp-operator  mcp-test  mcp.py  pyproject.toml  requirements.txt  run-server  run-tests  run_integration_tests.sh  run_mcp.py  run_mcp_server.py  run_multistep_tests.sh  run_real_multistep.sh  run_tests.sh  setup.py  test_mcp_server.py  uvx-mcp.json
oldcode/: MANIFEST.in  README.md  browser_operator.py  main.py
oldcode/src/: stdio_server.py
src/: __init__.py  basic_stdio_server.py  browser_operator.py  fastmcp_server.py  hybrid_server.py  main.py  minimal_server.py
src/mcp_operator/: __init__.py  __main__.py  browser.py  server.py  webtests
src/mcp_operator/cua/: __init__.py  agent.py  computer.py  utils.py
tests/: integration_test_browser.py  run_tests.py  test_browser_operator.py  test_mcp_integration.py  test_mcp_methods.py  test_multistep.py  test_real_multistep.py
